deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deep-sea-demo
  namespace: deep-sea
  labels:
    app: deep-sea-demo
spec:
  ingressClassName: traefik
  rules:
    - host: sea.7bl6jmr0fb.ankra.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deep-sea-demo
                port:
                  name: http
